--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -14,7 +14,7 @@
   @media screen and (max-width: 767px) {
     position: absolute;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
   }
 
   @media screen and (min-width: $tablet) {
@@ -132,7 +132,7 @@
     position: absolute;
     bottom: 0;
     left: -1px;
-    z-index: 1;
+    z-index: 2;
   }
 }
 
@@ -142,6 +142,10 @@
   height: 829px;
   position: absolute;
   transition: all $time-function;
+
+  &:first-child {
+    z-index: 1;
+  }
 }
 
 .slide img {
